--- a/index.html
+++ b/index.html
@@ -6,45 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Motion</title>
         <link rel="stylesheet" href="styles/styles.css" />
+        <script type="module" src="dist/app.js" defer></script>
     </head>
     <body>
-        <!-- header -->
-        <header class="motion-header">
-            <h1 class="motion-title">MOTION</h1>
-            <ul class="motion-menu">
-                <li class="motion-item">
-                    <button class="item-button">IMAGE</button>
-                </li>
-                <li class="motion-item">
-                    <button class="item-button">VIDEO</button>
-                </li>
-                <li class="motion-item">
-                    <button class="item-button">NOTE</button>
-                </li>
-                <li class="motion-item">
-                    <button class="item-button">TASK</button>
-                </li>
-            </ul>
-        </header>
-
-        <!-- Modal -->
-        <section class="url-modal">
-            <form action="post">
-                <div class="modal-column">
-                    <label class="input-label" for="input-title">Title</label>
-                    <input type="text" id="input-title" name="title" />
-                </div>
-                <div class="modal-column">
-                    <label class="input-label" for="input-url">URL</label>
-                    <input type="text" id="input-url" name="title" />
-                </div>
-            </form>
-            <button class="add-button">ADD</button>
-        </section>
-
-        <!-- footer -->
-        <footer class="motion-footer">
-            <p class="motion-copyright">©Copyright by JongHyeon All rights reversed</p>
-        </footer>
+        <div class="app">
+            <header class="banner">
+                <h1 class="banner__title">Motion</h1>
+                <ul class="control-panel">
+                    <li><button id="new-image" class="create-button">Image</button></li>
+                    <li><button id="new-video" class="create-button">Video</button></li>
+                    <li><button id="new-note" class="create-button">Note</button></li>
+                    <li><button id="new-todo" class="create-button">Todo</button></li>
+                </ul>
+            </header>
+            <main class="document"></main>
+            <footer class="footer">
+                <p>Copyright by Jong Hyeon. All rights reserved.</p>
+            </footer>
+        </div>
     </body>
 </html>
